--- a/source/saor.csproj
+++ b/source/saor.csproj
@@ -30,6 +30,8 @@
         <PackageReference Include="Cosmos.Debug.Kernel" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.System2" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.Plugs" Version="0-*" NoWarn="NU1604" />
+        <PackageReference Include="PrismAPI" Version="1.0.3" />
+        <PackageReference Include="SVGAIITerminal" Version="2.1.1" />
     </ItemGroup>
 
 </Project>
