--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: saor operating system
-description: A Jekyll theme for documentation
+title: saorOS
+description: saor operating system
 baseurl: "/saor" 
 url: "https://g1o.tech" 
 repository: giovol/saor
