--- a/source/saor.csproj
+++ b/source/saor.csproj
@@ -27,27 +27,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="Resources\Busy.bmp" />
-      <None Remove="Resources\DefaultFont.btf" />
-      <None Remove="Resources\Error.bmp" />
-      <None Remove="Resources\Link.bmp" />
+      <None Remove="Resources\Boot.bmp" />
       <None Remove="Resources\Mouse.bmp" />
-      <None Remove="Resources\MouseDrag.bmp" />
-      <None Remove="Resources\MouseText.bmp" />
       <None Remove="Resources\Pointer.bmp" />
       <None Remove="Resources\Pointer_IBeam.bmp" />
       <None Remove="Resources\Pointer_Move.bmp" />
       <None Remove="Resources\Pointer_Resize.bmp" />
+      <None Remove="Resources\program.bmp" />
+      <None Remove="Resources\wallpaper.bmp" />
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="Resources\Busy.bmp" />
-      <EmbeddedResource Include="Resources\DefaultFont.btf" />
-      <EmbeddedResource Include="Resources\Error.bmp" />
-      <EmbeddedResource Include="Resources\Link.bmp" />
+      <EmbeddedResource Include="Resources\Boot.bmp" />
       <EmbeddedResource Include="Resources\Mouse.bmp" />
-      <EmbeddedResource Include="Resources\MouseDrag.bmp" />
-      <EmbeddedResource Include="Resources\MouseText.bmp" />
+      <EmbeddedResource Include="Resources\program.bmp" />
+      <EmbeddedResource Include="Resources\wallpaper.bmp" />
     </ItemGroup>
 
     <ItemGroup>
